# K12_Record_Gen

./: .gitignore  download_models.py  main.py  pyproject.toml
datatool/: __init__.py  arguments.py  config.py  logger.py
datatool/apis/: __init__.py  base_api.py  chatai_api.py  chatanywhere_api.py  clip_emb.py  one_api.py  openrouter_api.py  other_api.py  sglang_api.py  silicon_api.py  vllm_api.py  vllm_swift_api.py  vllm_zhipu_api.py  wcode_api.py  zhipu_api.py
datatool/apps/: __init__.py  dataview.py
datatool/configs/: __init__.py
datatool/configs/multi_image/: category_def.json  config.yaml
datatool/configs/single_image/: category_def.json  category_train_candidates.yaml  config.yaml
datatool/examples/: Dataset@MetaFiles.yaml  __init__.py
datatool/examples/classification/: classify_math.py  get_category.py
datatool/examples/data_check/: check_data_content.py
datatool/examples/rl_format/: rl_format_check.py  rl_format_transform_no_think.py
datatool/examples/sglang_inference/: deploy.sh  inference.py
datatool/examples/vllm_inference/: rollout_reasoning_qas.py  start_server_openai.py
datatool/scripts/: README.md  check_data_content.py  gen_yaml_for_datahub.py  split_jsonl.py  unzip_repath_dataset.py  zip_dataset.py
datatool/scripts/data_aggregation/: merge_dataset.py  reconstruct_dataset.py
datatool/scripts/data_aggregation/merge_into_single_metafiles/: merge_data@MetaFiles.yaml  merge_dataset.py  (+1 more)
datatool/utils/: __init__.py  constant.py  data.py  file_io.py  format_check.py  parallel.py  prompt.py  samples.py  wrappers.py
