[project]
name = "k12-record-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "openai>=0.27.0",
    "omegaconf>=2.2.0",
    "dask>=2022.1.0",
    "flask>=3.1.2",
    "decord>=0.6.0",
    "pyairports>=0.0.1",
    "vllm>=0.11.0",
]
